Android GET changed to POST